--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 *.tfplan.*
 crash.log
 crash.*.log
-terraform.tfvars.json
+*.tfvars
 override.tf
 override.tf.json
 
@@ -23,4 +23,3 @@ override.tf.json
 # Exclude other common irrelevant files
 .DS_Store
 keys.json
-.terraform/*
