modify working directory in yml file

--- a/.github/workflows/terraform2.yml
+++ b/.github/workflows/terraform2.yml
@@ -65,6 +65,7 @@ jobs:
     defaults:
       run:
         shell: bash
+        working-directory: ./TerraformOnGCP/workspace_statefile
 
     steps:
     - name: Checkout
