--- a/TerraformOnGCP/GKE/k8s-configs/deployment.yml
+++ b/TerraformOnGCP/GKE/k8s-configs/deployment.yml
@@ -5,7 +5,7 @@ metadata:
   name: nginx-deployment
   namespace: default
 spec:
-  replicas: 2
+  replicas: 3
   selector:
     matchLabels:
       app: nginx
@@ -19,6 +19,13 @@ spec:
         image: nginx:1.14.2
         ports:
         - containerPort: 80
+        resources:
+          requests:
+            cpu: 100m
+            memory: 128Mi
+          limits:
+            cpu: 200m
+            memory: 256Mi
       tolerations:
       - key: instance_type
         value: spot
