--- a/TerraformOnGCP/GKE/k8s-configs/service.yml
+++ b/TerraformOnGCP/GKE/k8s-configs/service.yml
@@ -1,30 +1,30 @@
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: nginx
-#   namespace: default
-# spec:
-#   selector:
-#     app: nginx
-#   ports:
-#     - protocol: TCP
-#       port: 80
-# ---
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: nginx-ing
-#   namespace: default
-# spec:
-#   ingressClassName: nginx  # Corrected value
-#   rules:
-#     - http:
-#         paths:
-#           - path: /
-#             pathType: Prefix
-#             backend:
-#               service:
-#                 name: nginx
-#                 port:
-#                   number: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx
+  namespace: default
+spec:
+  selector:
+    app: nginx
+  ports:
+    - protocol: TCP
+      port: 80
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: nginx-ing
+  namespace: default
+spec:
+  ingressClassName: nginx  # Corrected value
+  rules:
+    - http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: nginx
+                port:
+                  number: 80
