--- a/TerraformOnGCP/GKE/ansible/roles/argocd/tasks/main.yml
+++ b/TerraformOnGCP/GKE/ansible/roles/argocd/tasks/main.yml
@@ -1,19 +1,16 @@
----
-- hosts: all
-  become: true
-  tasks:
-    - name: Install Argo CD CLI
-      apt:
-        name: argocd
-        state: present
-        update_cache: yes
+    - block:
+        - name: Install Argo CD CLI
+          apt:
+            name: argocd
+            state: present
+            update_cache: yes
 
-    - name: Install Argo CD
-      kubectl:
-        state: present
-        src: https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+        - name: Install Argo CD
+          kubectl:
+            state: present
+            src: https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
 
-    - name: Install some_package
-      apt:
-        name: some_package
-        state: present
+        - name: Install some_package
+          apt:
+            name: some_package
+            state: present
