update gke k8s config v2

--- a/TerraformOnGCP/GKE/ansible/group_vars/all.yml
+++ b/TerraformOnGCP/GKE/ansible/group_vars/all.yml
@@ -8,7 +8,7 @@ service_account: terraform@cloud-2255.iam.gserviceaccount.com
 
 # Namespaces
 namespaces:
-  - argocd
+  - default
   - application
   - monitoring
 
