--- a/TerraformOnGCP/GKE/k8s-configs/service.yml
+++ b/TerraformOnGCP/GKE/k8s-configs/service.yml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx
-  namespace: default
+  namespace: argocd
 spec:
   selector:
     app: nginx
@@ -11,21 +11,31 @@ spec:
   ports:
     - protocol: TCP
       port: 80
+      targetPort: 80
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: nginx-ing
-  namespace: default
+  namespace: argocd
+  annotations:
+    nginx.ingress.kubernetes.io/service.namespace: default
 spec:
-  ingressClassName: nginx  # Corrected value
+  ingressClassName: nginx
   rules:
-    - http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: nginx
-                port:
-                  number: 80
+  - http:
+      paths:
+      - path: /argocd
+        pathType: Prefix
+        backend:
+          service:
+            name: argocd-server
+            port:
+              number: 80
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: nginx
+            port:
+              number: 80
