--- a/.github/workflows/gke-dployment.yml
+++ b/.github/workflows/gke-dployment.yml
@@ -24,13 +24,15 @@ jobs:
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v1
         with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}  # Pass the project ID here
+          project_id: ${{ secrets.GCP_PROJECT_ID }} 
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
 
       - name: Initialize Terraform
         run: terraform init
+        working-directory: TerraformOnGCP/GKE
 
       - name: Apply Terraform configuration
         run: terraform apply -auto-approve
+        working-directory: TerraformOnGCP/GKE
