--- a/.github/workflows/gke-dployment.yml
+++ b/.github/workflows/gke-dployment.yml
@@ -31,9 +31,8 @@ jobs:
 
       - name: Set service account key environment variable
         run: |
-          echo "GOOGLE_APPLICATION_CREDENTIALS<<EOF" >> $GITHUB_ENV
-          echo "${{ secrets.GCP_SA_KEY }}" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
+          echo "${{ secrets.GCP_SA_KEY }}" > gcp_sa_key.json
+          echo "GOOGLE_APPLICATION_CREDENTIALS=$(pwd)/gcp_sa_key.json" >> $GITHUB_ENV
 
       - name: Initialize Terraform
         run: terraform init
