workflow update with cred

--- a/.github/workflows/gke-dployment.yml
+++ b/.github/workflows/gke-dployment.yml
@@ -27,7 +27,9 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
       - name: Unset GOOGLE_APPLICATION_CREDENTIALS
-        run: echo "" > $GOOGLE_APPLICATION_CREDENTIALS
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: ''
+        run: echo ''
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
