--- a/.github/workflows/gke-dployment.yml
+++ b/.github/workflows/gke-dployment.yml
@@ -38,7 +38,10 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
       - name: Write credentials to file
-        run: echo $GCP_SA_KEY > credentials.json
+        run: |
+            echo "$GCP_SA_KEY" > credentials.json
+            cat credentials.json
+            pwd
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
