update provider block + workflow

--- a/.github/workflows/gke-dployment.yml
+++ b/.github/workflows/gke-dployment.yml
@@ -37,21 +37,14 @@ jobs:
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-      - name: Write credentials to file
-        run: |
-            echo "$GCP_SA_KEY" > credentials.json
-            cat credentials.json
-            pwd
-
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         env:
-            GOOGLE_APPLICATION_CREDENTIALS: ./credentials.json
+            GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_SA_KEY }}
 
       - name: Initialize Terraform
-        run: terraform init -reconfigure
+        run: terraform init
 
       - name: Apply Terraform configuration
         run: terraform apply -auto-approve
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_SA_KEY }}
+
