--- a/.github/workflows/gke-deploy-workflow.yml
+++ b/.github/workflows/gke-deploy-workflow.yml
@@ -42,9 +42,24 @@ jobs:
         env:
             GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_SA_KEY }}
 
+  # Check if the cluster exists
+      - name: Check Cluster Existence
+        id: check_cluster
+        run: |
+          CLUSTER_NAME=$(terraform output -raw cluster_name)
+          CLUSTER_REGION=$(terraform output -raw cluster_region)
+          if gcloud container clusters describe "$CLUSTER_NAME" --region "$CLUSTER_REGION" --format="value(name)" &> /dev/null; then
+            echo "Cluster already exists."
+            echo "cluster_exists=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "Cluster does not exist."
+            echo "cluster_exists=false" >> "$GITHUB_OUTPUT"
+          fi
+        continue-on-error: true # Important: Continue even if describe fails (e.g., first run)
+
+
       - name: Initialize Terraform
         run: terraform init
 
       - name: Apply Terraform configuration
         run: terraform apply -auto-approve
-
