--- a/.github/workflows/app-deploy-workflow.yml
+++ b/.github/workflows/app-deploy-workflow.yml
@@ -25,6 +25,16 @@ jobs:
           credentials_json: ${{ secrets.GCP_SA_KEY }} # Your service account key JSON
           project_id: ${{ secrets.GCP_PROJECT_ID }} # Your GCP Project ID
 
+    # --- Set up Terraform (for reading state) ---
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v2
+
+      - name: Initialize Terraform
+        run: terraform init
+        working-directory: ./TerraformOnGCP/GKE  # Initialize in the Terraform directory
+
+    # --- Now use terraform output ---
+
       - name: Configure gcloud and kubectl
         run: |
           gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
