authenticate service account issue v2

--- a/.github/workflows/app-deploy-workflow.yml
+++ b/.github/workflows/app-deploy-workflow.yml
@@ -62,11 +62,18 @@ jobs:
    
       - name: Configure gcloud and kubectl
         run: |
-            gcloud config set project cloud-2255
-            gcloud container clusters get-credentials gke-cluster --zone us-central1-f --project cloud-2255
-            rm -rf ~/.kube
-            gcloud container clusters get-credentials gke-cluster --zone us-central1-f --project cloud-2255
-  
+          gcloud config set project cloud-2255
+          gcloud container clusters get-credentials gke-cluster --zone us-central1-f --project cloud-2255
+          rm -rf ~/.kube
+          gcloud container clusters get-credentials gke-cluster --zone us-central1-f --project cloud-2255
+          # Explicitly set the kubectl context (add these lines)
+          kubectl config get-contexts  # List available contexts (for debugging)
+          kubectl config use-context gke_cloud-2255_us-central1-f_gke-cluster  # USE THE CORRECT CONTEXT NAME from the previous command's output
+          kubectl config current-context #check current context
+
+      - name: Create Argo CD Namespace
+        run: kubectl create namespace argocd --dry-run=client -o yaml | kubectl apply -f -
+        working-directory: ./TerraformOnGCP/GKE
 
       - name: Create Argo CD Namespace
         run: kubectl create namespace argocd --dry-run=client -o yaml | kubectl apply -f -
