--- a/.github/workflows/app-deploy-workflow.yml
+++ b/.github/workflows/app-deploy-workflow.yml
@@ -60,14 +60,22 @@ jobs:
           gcloud projects get-iam-policy ${{ secrets.GCP_PROJECT_ID }} --filter="bindings.members:serviceAccount:$(gcloud auth list --filter=status:ACTIVE --format='value(account)')"
       # --- END DEBUGGING STEPS ---
    
+      - name: Verify gke-gcloud-auth-plugin Installation  # ADDED VERIFICATION
+        run: which gke-gcloud-auth-plugin
+
       - name: Configure gcloud and kubectl
         run: |
+          echo "${{ secrets.GCP_SA_KEY }}" > /tmp/gcp_sa_key.json # write credential file - for testing
+          gcloud auth activate-service-account --key-file=/tmp/gcp_sa_key.json # Explicit activation - for testing only
           gcloud config set project cloud-2255
           gcloud container clusters get-credentials gke-cluster --zone us-central1-f --project cloud-2255
           rm -rf ~/.kube
           rm -rf ~/.config/gcloud
           gcloud container clusters get-credentials gke-cluster --zone us-central1-f --project cloud-2255
-          kubectl create namespace argocd
+          kubectl get clusterrolebindings  # Requires cluster-admin
+          kubectl get pods -A # Check cluster level access
+          kubectl create namespace argocd # Create namespace
+          rm /tmp/gcp_sa_key.json # Remove credential file
 
       - name: Create Argo CD Namespace
         run: kubectl create namespace argocd
